# the-3th-fly

./: README.md
catkin_ws/src/cv_detect/: CMakeLists.txt  package.xml
catkin_ws/src/cv_detect/msg/: BarMsg.msg  LedMsg.msg
catkin_ws/src/cv_detect/scripts/: barcode_node.py  blue_node.py  box_node.py  supersonic_node.py
catkin_ws/src/fake_nodes/: CMakeLists.txt  package.xml
catkin_ws/src/fake_nodes/scripts/: barcode_node.py  blue_node.py  supersonic_node.py
catkin_ws/src/lidar_to_mavros/: package.xml
catkin_ws/src/lidar_to_mavros/lib/: lidar_to_mavros
catkin_ws/src/offboard/: CMakeLists.txt  package.xml
catkin_ws/src/offboard/launch/: run.launch
catkin_ws/src/offboard/src/: offboard_node.cpp  offboard_node_pre.cpp
catkin_ws/src/position_orientation/: CMakeLists.txt  package.xml
catkin_ws/src/position_orientation/src/: lidar_data_node.cpp  pose_data_node.cpp
src/cv_detect/msg/: BarMsg.msg
src/cv_detect/scripts/: barcode_node.py  box_node.py
src/cv_detect/scripts/rubbish_bin/: barcode_node.py  box_node.py
src/lidar_to_mavros/: CMakeLists.txt
src/offboard/: CMakeLists.txt  package.xml
src/offboard/launch/: offboard.launch  offboard_wsl.launch  run.launch
src/offboard/src/: offboard_node.cpp
src/screen/: CMakeLists.txt  package.xml
src/screen/scripts/: screen.py
src/vision/: CMakeLists.txt  package.xml
src/vision/msg/: box_data.msg
src/vision/scripts/: barcode_scanner.py  box_detect.py  box_detect_old.py  led.py  servo.py
src/vision/src/: region.cpp
地面站/自定义材料/: stm32.zi  启动.zi  按钮1.zi  标志.zi
